# KespR3m0

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/board/: CMakeLists.txt  Kconfig
components/board/include/: kespr_board.h  kespr_display.h  kespr_net.h  kespr_power.h
components/board/priv/: display_wshare_lcd.cc  display_wshare_lcd.h
components/board/priv_include/: display_wshare_lcd.h  lovyan_gfx.h  st7789_lcd.h
components/board/src/: display_wshare_lcd.cc  kespr_board.cc  kespr_display.cc  kespr_net.cc  kespr_power.cc  st7789_lcd.cc
components/gui/: CMakeLists.txt  Kconfig  idf_component.yml
components/gui/assets/fonts/: ui_font_icons.c  ui_font_regular.c  ui_font_title.c
components/gui/include/: kespr_gui.h
components/gui/priv_include/: kespr_lvgl.h  kespr_scene.h
components/gui/src/: kespr_gui.cc  kespr_lvgl.cc  kespr_scene.cc
components/httpd/: CMakeLists.txt  Kconfig  idf_component.yml
components/httpd/priv_include/: static_handler.h  ws_handler.h  ws_utils.h
components/httpd/src/: apps_manager.cc  apps_manager.h  events.cc  server.cc  static_handler.cc  ws_commander.cc  ws_commander.h  ws_handler.cc  ws_handler.h  ws_keep_alive.cc  ws_keep_alive.h  ws_utils.cc  ws_utils.h
main/: CMakeLists.txt  Kconfig  Kconfig.projbuild  bytes.h  main.cc  uart.cc  uart.h  usbkb.cc  usbkb.h
main/service/: api_service.cc  api_service.h  base_service.cc  base_service.h  bytes.h  keyboard_service.cc  keyboard_service.h  service.cc  service.h  static_service.cc  static_service.h  uart_service.cc  uart_service.h  usbkb_service.cc  usbkb_service.h  ws_base_service.cc  ws_base_service.h  ws_handler.cc  ws_handler.h  ws_keep_alive.cc  ws_keep_alive.h  ws_utils.cc  ws_utils.h
(+57 files in other folders)
